; ModuleID = '/home/carl/AnghaBench/linux/block/extr_sed-opal.c_cmd_start.c'
source_filename = "/home/carl/AnghaBench/linux/block/extr_sed-opal.c_cmd_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.opal_dev = type { i32 }

@OPAL_CALL = common dso_local global i32 0, align 4
@OPAL_UID_LENGTH = common dso_local global i32 0, align 4
@OPAL_METHOD_LENGTH = common dso_local global i32 0, align 4
@OPAL_STARTLIST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.opal_dev*, i32*, i32*)* @cmd_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmd_start(%struct.opal_dev* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.opal_dev*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.opal_dev* %0, %struct.opal_dev** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load %struct.opal_dev*, %struct.opal_dev** %4, align 8
  %9 = call i32 @clear_opal_cmd(%struct.opal_dev* %8)
  %10 = load %struct.opal_dev*, %struct.opal_dev** %4, align 8
  %11 = load %struct.opal_dev*, %struct.opal_dev** %4, align 8
  %12 = getelementptr inbounds %struct.opal_dev, %struct.opal_dev* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @set_comid(%struct.opal_dev* %10, i32 %13)
  %15 = load %struct.opal_dev*, %struct.opal_dev** %4, align 8
  %16 = load i32, i32* @OPAL_CALL, align 4
  %17 = call i32 @add_token_u8(i32* %7, %struct.opal_dev* %15, i32 %16)
  %18 = load %struct.opal_dev*, %struct.opal_dev** %4, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* @OPAL_UID_LENGTH, align 4
  %21 = call i32 @add_token_bytestring(i32* %7, %struct.opal_dev* %18, i32* %19, i32 %20)
  %22 = load %struct.opal_dev*, %struct.opal_dev** %4, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* @OPAL_METHOD_LENGTH, align 4
  %25 = call i32 @add_token_bytestring(i32* %7, %struct.opal_dev* %22, i32* %23, i32 %24)
  %26 = load %struct.opal_dev*, %struct.opal_dev** %4, align 8
  %27 = load i32, i32* @OPAL_STARTLIST, align 4
  %28 = call i32 @add_token_u8(i32* %7, %struct.opal_dev* %26, i32 %27)
  %29 = load i32, i32* %7, align 4
  ret i32 %29
}

declare dso_local i32 @clear_opal_cmd(%struct.opal_dev*) #1

declare dso_local i32 @set_comid(%struct.opal_dev*, i32) #1

declare dso_local i32 @add_token_u8(i32*, %struct.opal_dev*, i32) #1

declare dso_local i32 @add_token_bytestring(i32*, %struct.opal_dev*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
